# rrrs

./: .gitignore  CODE_OF_CONDUCT.md  Cargo.toml  README.md
.github/ISSUE_TEMPLATE/: documentation_request  enhancement_suggestion  performance_report  security_vulnerability_report
.github/workflows/: main.yml  rust-clippy.yml  rust.yml
src/: args.rs  library.rs  main.rs
