[package]
name = "rrrs"
version = "0.1.0"
edition = "2021"
authors = ["Ethan Wickstrom"]
repository = "https://github.com/ethan-wickstrom/rrrs/"
description = "Welcome to RRRS, a rapid, hyper-optimized CSV random sampling tool designed with performance and efficiency at its core."
license = "Apache-2.0"
license-file = "LICENSE"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
polars = { version = "0.38.1", features = ["parquet", "lazy", "csv"] }
clap = { version = "4.5.1"}
rand = "0.9.0-alpha.0"
rayon = "1.9.0"
tokio = { version = "1.36.0", features = ["fs", "io-std", "io-util", "full"] }
parking_lot = "0.12.1"
indicatif = "0.17.8"
