[package]
name = "rrrs"
version = "0.1.4"
edition = "2021"
authors = ["Ethan Wickstrom"]
repository = "https://github.com/ethan-wickstrom/rrrs/"
description = "Welcome to RRRS, a rapid, hyper-optimized CSV random sampling tool designed with performance and efficiency at its core."
license-file = "LICENSE"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
polars = { version = "0.38.3", features = ["parquet", "lazy", "csv", "polars-lazy", "polars-io"] }
clap = { version = "4.5.4"}
rand = "0.9.0-alpha.1"
rayon = "1.10.0"
tokio = { version = "1.36.0", features = ["fs", "io-std", "io-util", "rt", "rt-multi-thread", "macros"] }
parking_lot = "0.12.1"
indicatif = { version = "0.17.8", features = ["rayon"] }
jemallocator = "0.5.4"
futures = "0.3.30"

[profile.release]
opt-level = 3
debug = false
debug-assertions = false
overflow-checks = false
panic = "abort"
lto = "fat"
codegen-units = 1
incremental = false
rpath = false